<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_DI" Id="{af15c45a-3604-4532-81ea-d73dd1f27150}">
    <Declaration><![CDATA[TYPE ST_DI :
STRUCT
		Value		  AT %I*	: BOOL	;
		Description 			: STRING	;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>